k8s_manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inferx
  labels:
    name: inferx
