k8s_manifests/04-audit-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-db
  namespace: inferx
spec:
  selector:
    app: audit-db
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: audit-db
  namespace: inferx
spec:
  serviceName: "audit-db"
  replicas: 1
  selector:
    matchLabels:
      app: audit-db
  template:
    metadata:
      labels:
        app: audit-db
    spec:
      containers:
      - name: postgres
        image: postgres:14.5
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: audit-db-data
          mountPath: /data/postgres
        - name: init-sql
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: init-sql
        configMap:
          name: audit-db-init
      - name: audit-db-data
        persistentVolumeClaim:
          claimName: audit-db-pvc
