k8s_manifests/05-etcd.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd
  namespace: inferx
spec:
  selector:
    app: etcd
  ports:
  - name: client
    port: 2379
    targetPort: 2379
  - name: peer
    port: 2380
    targetPort: 2380
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etcd
  namespace: inferx
spec:
  serviceName: "etcd"
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:v3.5.13
        ports:
        - containerPort: 2379
          name: client
        - containerPort: 2380
          name: peer
        command:
        - etcd
        - --name=etcd-00
        - --data-dir=/opt/inferx/data/etcd
        - --advertise-client-urls=http://etcd-00:2379
        - --listen-client-urls=http://0.0.0.0:2379
        - --initial-advertise-peer-urls=http://etcd-00:2380
        - --listen-peer-urls=http://0.0.0.0:2380
        - --initial-cluster=etcd-00=http://etcd-00:2380
        volumeMounts:
        - name: etcd-data
          mountPath: /opt/inferx/data/etcd
      volumes:
      - name: etcd-data
        persistentVolumeClaim:
          claimName: etcd-pvc
