k8s_manifests/06-keycloak-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  namespace: inferx
spec:
  selector:
    app: keycloak-db
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-db
  namespace: inferx
spec:
  serviceName: "keycloak-db"
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
      - name: postgres
        image: postgres:14.5
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: keycloak-db-data
          mountPath: /data/postgres
      volumes:
      - name: keycloak-db-data
        persistentVolumeClaim:
          claimName: keycloak-db-pvc
