k8s_manifests/07-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: inferx
spec:
  selector:
    app: keycloak
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: inferx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:latest
        args:
          - start-dev
          - --verbose
        ports:
        - containerPort: 8080
          name: http
