k8s_manifests/09-inferx-one.yaml
apiVersion: v1
kind: Service
metadata:
  name: inferx-one
  namespace: inferx
spec:
  selector:
    app: inferx-one
  ports:
  - port: 4000
    targetPort: 4000
    name: api
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inferx-one
  namespace: inferx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inferx-one
  template:
    metadata:
      labels:
        app: inferx-one
    spec:
      containers:
      - name: inferx-one
        image: inferx/inferx_one:v0.1.0
        args:
        - ./onenode
        - /opt/inferx/config/node1.json
        ports:
        - containerPort: 4000
          name: api
        volumeMounts:
        - name: inferx-config
          mountPath: /opt/inferx/config
        - name: inferx-data
          mountPath: /opt/inferx/data
        - name: inferx-bin
          mountPath: /opt/inferx/bin
        resources:
          requests:
            memory: "2Gi"
            cpu: "2"
          limits:
            memory: "8Gi"
            cpu: "10"
        securityContext:
          privileged: true
        readinessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 20
      volumes:
      - name: inferx-config
        configMap:
          name: inferx-config
      - name: inferx-data
        persistentVolumeClaim:
          claimName: inferx-data-pvc
      - name: inferx-bin
        persistentVolumeClaim:
          claimName: inferx-bin-pvc
