k8s_manifests/11-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inferx-ingress
  namespace: inferx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /authn/?(.*)
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port: 
              name: http
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: inferx-one
            port:
              name: api
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: inferx-dashboard
            port:
              name: http
